--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "trade-exec",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://seniorfullstackdev.github.io/swap/",
   "dependencies": {
+    "@0x/contract-addresses": "^4.11.0",
+    "@0x/contract-wrappers": "^13.8.0",
+    "@0x/order-utils": "^10.3.0",
+    "@0x/utils": "^5.5.1",
     "@ethersproject/address": "^5.0.2",
     "@ethersproject/constants": "^5.0.2",
     "@ethersproject/contracts": "^5.0.2",
     "@ethersproject/providers": "^5.0.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@uniswap/sdk": "^3.0.3-beta.1",
-    "@uniswap/token-lists": "^1.0.0-beta.10",
     "@web3-react/core": "^6.1.1",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/network-connector": "^6.1.3",
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "cryptocurrency-icons": "^0.16.1",
+    "ethers": "^5.0.8",
     "jazzicon": "^1.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -28,12 +33,17 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-act": "^1.8.0",
     "redux-localstorage-simple": "^2.3.1",
-    "styled-components": "^5.1.1"
+    "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.1",
+    "web3": "^1.2.11",
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "set PORT=8082 && react-scripts start",
-    "build": "react-scripts build",
+    "build": "yarn react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
